--- a/js/urlify/Makefile
+++ b/js/urlify/Makefile
@@ -1,7 +1,7 @@
 -include config.mak
 
 ifneq ($(DEBUG),)
-WEBPACK_OPTIONS = --mode=development
+WEBPACK_OPTIONS = --mode=development --devtool inline-source-map
 else
 WEBPACK_OPTIONS = --mode=production
 endif
@@ -12,6 +12,9 @@ bundle.js: main.ts tsconfig.json webpack.config.js package-lock.json Makefile co
 package-lock.json: package.json
 	npm install
 
+config.mak:
+	touch config.mak
+
 check:
 	npx eslint main.ts
 
@@ -19,4 +22,4 @@ run:
 	python3 -m http.server
 
 install:
-	scp index.html bundle.js wilson:share/pages/urlify/
+	cp index.html bundle.js ~/git/vmiklos.hu/pages/urlify/
