--- a/js/urlify/package.json
+++ b/js/urlify/package.json
@@ -5,13 +5,12 @@
   "author": "Miklos Vajna",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "20.10.6",
-    "@typescript-eslint/eslint-plugin": "6.18.0",
-    "@typescript-eslint/parser": "6.18.0",
-    "eslint": "8.56.0",
-    "ts-loader": "9.5.1",
-    "typescript": "5.3.3",
-    "webpack": "5.94.0",
-    "webpack-cli": "5.1.4"
+    "@types/node": "24.8.1",
+    "eslint": "9.38.0",
+    "ts-loader": "9.5.4",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.46.1",
+    "webpack": "5.102.1",
+    "webpack-cli": "6.0.1"
   }
 }
