--- a/dioxus/random-choose/Cargo.toml
+++ b/dioxus/random-choose/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.7.1", features = [] }
+form_urlencoded = "1.2.2"
 rand = "0.9.2"
+tracing = "0.1.43"
 wasm-bindgen-futures = "0.4.56"
 
 [dependencies.getrandom]
