--- a/dioxus/cpm-gui/Cargo.toml
+++ b/dioxus/cpm-gui/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.100"
 dioxus = { version = "0.7.1", features = [] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.147"
+tracing = "0.1.44"
 
 [features]
 default = ["desktop"]
