--- a/dioxus/random-choose/Cargo.toml
+++ b/dioxus/random-choose/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.7.3", features = [] }
-form_urlencoded = "1.2.2"
 rand = "0.9.2"
 tracing = "0.1.43"
 wasm-bindgen-futures = "0.4.56"
@@ -18,7 +17,7 @@ features = []
 [dependencies.web-sys]
 version = "0.3.83"
 optional = true
-features = ["Window", "Navigator", "Clipboard"]
+features = ["Window", "Navigator", "Clipboard", "UrlSearchParams"]
 
 [features]
 default = ["web"]
