--- a/dioxus/random-choose/Cargo.toml
+++ b/dioxus/random-choose/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.100"
 dioxus = { version = "0.7.3", features = [] }
 rand = "0.9.2"
 tracing = "0.1.43"
